
plugins {
    id 'java-library'
    id 'maven-publish'
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED'
    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED'
    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
    options.compilerArgs << '--add-exports' << 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.15.0'
}

task printEverything(type: Exec) {
    workingDir '/home/jitpack'
    commandLine 'find', '.'
}

task buildRustWindows(type: Exec) {
    dependsOn('printEverything')
    environment 'PATH', System.getenv('PATH') + ":/home/jitpack/build/xpack-mingw-w64-gcc-13.3.0-1/bin"
    commandLine System.properties['user.home'] + '/.cargo/bin/cargo', 'build', '--target', 'x86_64-pc-windows-gnu', '--release'
}

task buildRustLinux(type: Exec) {
    commandLine System.properties['user.home'] + '/.cargo/bin/cargo', 'build', '--target', 'x86_64-unknown-linux-gnu'
}

task buildRust {
    dependsOn('buildRustWindows')
    dependsOn('buildRustLinux')
}

task copyRustWindows(type: Copy) {
    dependsOn('buildRustWindows')
    from 'target/x86_64-pc-windows-gnu/release/robot_tools.dll'
    into 'src/main/resources'
}

task copyRustLinux(type: Copy) {
    dependsOn('buildRustLinux')
    from 'target/x86_64-unknown-linux-gnu/debug/librobot_tools.so'
    into 'src/main/resources'
}

task copyRust {
    dependsOn('copyRustWindows')
    dependsOn('copyRustLinux')
}

tasks.named('processResources') {
    dependsOn('copyRust')
}

publishing {
    publications {
        maven(MavenPublication) {
            // Use jitpack format for publishing to mavenLocal
            groupId = 'com.github.Frc5572'
            artifactId = 'RobotTools'
            version = 'test'

            from components.java
        }
    }
}
